[package]
name = "rustc_serialize"
version = "0.4.0-devel"
edition = "2018"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/rustc-serialize"
homepage = "https://github.com/rust-lang/rustc-serialize"
documentation = "https://doc.rust-lang.org/rustc-serialize"
description = """
Generic serialization/deserialization support corresponding to the
`derive(RustcEncodable, RustcDecodable)` mode in the compiler. Also includes
support for hex, base64, and json encoding and decoding.

This crate is deprecated in favor of serde.
"""

[features]
default = ["smol_str"]

[dependencies]
smol_str = { version = "0.2", default_features = false, optional = true }

#[dev-dependencies]
#rand = "0.3"
